# inspection_lora

./: .gitignore  AGENT_GUIDE.md  README.md  agent-progress.md  feature_list.json  init.sh  pyproject.toml  requirements.txt
configs/: eval_config.yaml  lora_config.yaml  lora_config_dummy.yaml  lora_config_rank32.yaml  lora_config_rank8.yaml
data/templates/: __init__.py  composite_templates.py  cpu_templates.py  disk_templates.py  memory_templates.py  network_templates.py
docs/: operations.md  training_report.md
openspec/: design.md  requirements.md  tasks.md
scripts/: compare_models.py  create_dummy_data.py  e2e_test.py  evaluate.py  filter_data.py  gen_templates.py  generate_data.py  inference.py  inspect_prometheus.py  split_data.py
src/inspection_lora/: __init__.py  data_utils.py  metrics_parser.py  prompt_builder.py
